--- a/PetShop/app/src/main/res/values/colors.xml
+++ b/PetShop/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="btn_color">#3592C4</color>
 </resources>
