--- a/PetShop/app/src/main/res/values/colors.xml
+++ b/PetShop/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="main_color">#4bbba2</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="btn_color">#3592C4</color>
 </resources>
