--- a/PetShop/app/src/main/res/values/themes.xml
+++ b/PetShop/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.PetShop" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/main_color</item>
     </style>
 
-    <style name="Theme.PetShop" parent="Base.Theme.PetShop" />
+    <style name="Theme.PetShop" parent="Base.Theme.PetShop"/>
+
+    <style name="ToolbarTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
 </resources>
