--- a/PetShop/app/src/main/res/layout/activity_add.xml
+++ b/PetShop/app/src/main/res/layout/activity_add.xml
@@ -23,7 +23,14 @@
             android:id="@+id/txtTit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:inputType="text" />
+        <Spinner
+            android:id="@+id/spnTit"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/titOptions" />
 
         <TextView
             android:id="@+id/textView2"
