--- a/PetShop/app/src/main/res/layout/activity_petshop.xml
+++ b/PetShop/app/src/main/res/layout/activity_petshop.xml
@@ -18,10 +18,13 @@
         tools:ignore="MissingConstraints" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/petshop"
-        tools:ignore="MissingConstraints"></TextView>
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
